--- a/medicos.css
+++ b/medicos.css
@@ -2,7 +2,9 @@
     margin:0;
     padding: 0;
     }
-
+    body{
+        background:linear-gradient(180deg,blue,white);
+    }
 .container{
     background: #fff;
     width: 90%;
@@ -27,7 +29,7 @@ text-align:center ;
 font-family:fantasy;
 font-size: 1.4em;
 background: rgb(50, 148, 205);
-margin: 20px 315px;
+margin: 20px 320px;
 padding: 20px;
 border: 5px solid rgb(0, 30, 128);
 width:67%;
@@ -69,6 +71,26 @@ select{
 
 
 }img{
-    width:720px;
+    width:730px;
     height: 610px;
+}nav{
+    border: 5px solid rgb(0, 30, 128);
+    background:rgb(50, 148, 205);
+    margin:20px 229px 0px 320px;
+    padding:20px;       
+}
+
+.boton{
+    display:inline-block;
+    align-items: center;
+    background-color:rgb(46, 156, 207);
+    font-size: 18px;
+    text-align: center;
+    padding: 15px 32px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0 15px;
+}a{
+    color:white;
+    text-decoration: none;
 }
