--- a/pacientes.css
+++ b/pacientes.css
@@ -2,7 +2,9 @@
     margin:0;
     padding: 0;
     }
-
+body{
+        background:linear-gradient(180deg,blue,white);
+    }
 .container{
     background: #fff;
     width: 90%;
@@ -25,12 +27,12 @@ form{
 header{
 text-align:center ;
 font-family:fantasy;
-font-size: 1.4em;
+font-size: 2em;
 background:rgb(50, 148, 205);
-margin: 20px 315px;
+margin: 20px 209px 0px 316px;
 padding: 20px;
 border: 5px solid rgb(0, 30, 128);
-width:67%;
+
     
 
 }
@@ -71,4 +73,24 @@ select{
 }img{
     width:720px;
     height: 620px;
+}nav{
+    border: 5px solid rgb(0, 30, 128);
+    background:rgb(50, 148, 205);
+    margin:20px 209px 0px 316px;
+    padding:20px;       
+}
+
+.boton{
+    display:inline-block;
+    align-items: center;
+    background-color:rgb(46, 156, 207);
+    font-size: 18px;
+    text-align: center;
+    padding: 15px 30px;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 0 20px;
+}a{
+    color:white;
+    text-decoration: none;
 }
