--- a/medicos.css
+++ b/medicos.css
@@ -9,7 +9,7 @@
     background: #fff;
     width: 90%;
     max-width: 900px;
-    margin: 20px 320px;
+    margin: 5px 120px;
     
     display: grid;
     gap: 2px;
@@ -18,7 +18,7 @@
 form{
     border: 5px solid rebeccapurple;
     background-color:lightslategray;
-    height: 600px;
+    height: 460px;
     color:white;
     text-transform: uppercase;
 
@@ -29,20 +29,20 @@ text-align:center ;
 font-family:fantasy;
 font-size: 1.4em;
 background: rgb(50, 148, 205);
-margin: 20px 320px;
-padding: 20px;
+margin: 5px 125px;
+padding: 5px;
 border: 5px solid rgb(0, 30, 128);
-width:67%;
+width:78%;
     
 
 }
 h2{
  text-align:center;
- margin-bottom: 20px;
+ 
 }
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     font-weight: bold;
     font-size: fantasy;
     text-align: center;
@@ -57,8 +57,8 @@ label {
 }
 input{
     width: 90%;
-    padding: 10px;
-    margin:10px;
+    padding: 5px;
+    margin:8px;
     border-radius: 10px;
     text-align:center;
     text-transform:uppercase;
@@ -71,26 +71,36 @@ select{
 
 
 }img{
-    width:730px;
-    height: 610px;
+    width:545px;
+    height: 470px;
 }nav{
     border: 5px solid rgb(0, 30, 128);
     background:rgb(50, 148, 205);
-    margin:20px 229px 0px 320px;
-    padding:20px;       
+    margin:5px 229px 0px 120px;
+    padding:20px;  
+    width:76%;
+         
 }
 
 .boton{
     display:inline-block;
     align-items: center;
     background-color:rgb(46, 156, 207);
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
     padding: 15px 32px;
     font-weight: bold;
     cursor: pointer;
-    margin: 0 15px;
+    margin: 0 5px;
 }a{
     color:white;
     text-decoration: none;
+}@media screen and (max-width:768px){
+    header{
+        width:94%;
+    }
+
+}
+nav,.boton{
+  font-size:1.2 em ;
 }
